# xf86-video-openchrome

./: ChangeLog  Makefile.am  README  README.build  README.xvmc-dev  configure.ac  drm-patch.diff  release_notes-0.3.0
libxvmc/: Makefile.am  ochr_ioctl.c  ochr_ioctl.h  ochr_ws_driver.h  viaLowLevel.c  viaLowLevel.h  viaLowLevelPro.c  viaXvMC.c  viaXvMCPriv.h
man/: Makefile.am
src/: Imakefile  Makefile.am  ochr_ioctl.c  ochr_ioctl.h  ochr_ws_driver.c  ochr_ws_driver.h  svnrelease.h  via.h  via_3d.c  via_3d.h  via_accel.c  via_bandwidth.c  via_bios.h  via_ch7xxx.c  via_crtc.c  via_cursor.c  via_cvt.c  via_dga.c  via_display.c  via_dmabuffer.h  via_dri.c  via_dri.h  via_driver.c  via_driver.h  via_drmclient.h  via_fp.c  via_glamor.c  via_i2c.c  via_id.c  via_lvds.c  via_memcpy.c  via_memory.c  via_mode.c  via_mode.h  via_panel.c  via_priv.h  via_regs.h  via_shadow.c  via_swov.c  via_ums.c  (+5 more)
src/xvmc/: Imakefile  Makefile.am  driDrawable.c  viaLowLevel.c  viaLowLevelPro.c  viaXvMC.c  xf86dri.c
unichrome/: Imakefile  Makefile.am  via.h  via.man  via_3d.c  via_3d.h  via_accel.c  via_bandwidth.c  via_bios.h  via_dga.c  via_dmabuffer.c  via_dmabuffer.h  via_dri.c  via_driver.c  via_driver.h  via_i2c.c  via_id.c  via_id.h  via_memcpy.c  via_memory.c  via_mode.c  via_mode.h  via_priv.h  via_swov.c  via_swov.h  via_vbe.c  via_vgahw.c  via_video.c  via_video.h  via_vt162x.c  via_xvmc.c
unichrome/sil164/: sil164.c
unichrome/vt1632/: Makefile.am  vt1632.c  vt1632.h  vt1632_module.c  vt1632_reg.h
unichrome/xvmc/: driDrawable.c
